--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <span id="element"></span>
         </div>
         <div class="rights1">
-            <img src="pic2.png" alt="" height="400px">
+            <img src="ImagesWeb/pic2.png" alt="" height="400px">
         </div>
     </section>
     <section class="secondsection">
@@ -375,7 +375,7 @@
                 <div class="row">
                 <div class="col-1">
                     <div class="fade-in">
-                    <img src="profilePic.jpg" alt="" height="400px" style="border-radius: 15px;">
+                    <img src="ImagesWeb/profilePic.jpg" alt="" height="400px" style="border-radius: 15px;">
                     </div>
                 </div>
                 <div class="col-2">
@@ -468,7 +468,7 @@
                     <h2 class="Gold">IBM</h2>
                     <p>Course on the foundation of AI, on IBM Skills Build Platform</p>
                     <br>
-                    <img src="cert1.png" alt="" height="150px">
+                    <img src="ImagesWeb/cert1.png" alt="" height="150px">
                     <br>
                     <a href="https://www.credly.com/badges/539145b3-6458-47d3-9a30-cab67ff67f93/public_url">Learn More</a>
                 </div>
@@ -476,7 +476,7 @@
                     <h2 class="Gold">Coursera</h2>
                     <p>Course on Object Oriented Data Data-Structures in C++, Illinos University</p>
                     <br>
-                    <img src="cert2.png" alt="" height="150px">
+                    <img src="ImagesWeb/cert2.png" alt="" height="150px">
                     <br>
                     <a href="https://coursera.org/share/f37bae18daf59a72ae5f6a43ac409a1d">learn More</a>
                 </div>
@@ -484,7 +484,7 @@
                     <h2 class="Gold">Coursera</h2>
                     <p>Course on Resposive Website Development, University of London</p>
                     <br>
-                    <img src="cert3.png" alt="" height="150px">
+                    <img src="ImagesWeb/cert3.png" alt="" height="150px">
                     <br>
                     <a href="https://coursera.org/share/a171f7a3813e840fe2c5428328cb3cd7">learn More</a>
                 </div>
