--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
      <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
      <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Portfolio Page</title>
+    <title>Sarthak's Webpage</title>
     <style>
         *{
             margin: 0px;
@@ -537,7 +537,7 @@
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 <script>
     var typed = new Typed('#element', {
-      strings: ["Welcome To My Portfolio Page", "I'm Passionate About", "Data Analysis And Machine Learning,", 
+      strings: ["Welcome To My Resume Page", "I'm Passionate About", "Data Analysis And Machine Learning,", 
       "Web-designing And Database Management,", "Competitive Coding And Data-Structures."],
       typeSpeed: 90,
       backSpeed: 50,
